# chapter-one

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: README.md  backend-ci.yml  deploy-dev.yml  deploy-frontend-dev.yml  deploy-frontend-prod.yml  deploy-prod.yml  frontend-ci.yml  infra-validate.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260418_0900_initial_users_table.py  20260418_1100_username_nullable.py  20260418_1200_analyses_core.py  20260418_1900_social_tables.py  20260419_0000_backfill_posts.py
backend/app/: config.py  main.py
backend/app/api/: analysis.py  telemetry.py
backend/app/api/v1/: analyses.py  auth.py  social.py  users.py
backend/app/auth/: __init__.py  dependencies.py  oidc.py  session.py
backend/app/core/: charts.py  llm.py  mermaid_sanitizer.py  pdf.py  progress.py  queue.py
backend/app/db/: __init__.py  pool.py
backend/app/models/: dimensions.py  schemas.py
backend/app/observability/: __init__.py  context.py  extractors.py  logger.py  metrics.py  summary.py  trace.py
backend/app/pipeline/: context.py  pipeline.py  research_engine.py
backend/app/pipeline/agents/: base.py  business_model.py  competitive_intel.py  gtm_team.py  market_sizing.py  news_trends.py  orchestrator.py  problem_pmf.py  regulatory.py  report_compiler.py  risk_moat.py  safety_gate.py  scoring.py
backend/app/prompts/: library.py
backend/app/storage/: analyses.py  cache.py  db.py  memory.py  repository.py  social.py
backend/app/workers/: analysis_worker.py
backend/migrations/: 001_initial.sql
backend/tests/: conftest.py  test_charts.py  test_dimensions.py  test_extractors.py  test_mermaid_sanitizer.py  test_metrics.py  test_prompts.py  test_research_engine.py  test_schemas.py  test_summary.py  test_year_distribution.py
docs/: IMPLEMENTATION_PLAN.md
docs/phase2/: 00-overview.md  01-requirements.md  02-architecture.md  03-data-model.md  04-apis.md  05-security.md  06-infrastructure.md  07-operations.md  08-cost-model.md  09-roadmap.md  10-decisions.md  11-open-questions.md  (+2 more)
frontend/: package-lock.json  package.json  staticwebapp.config.json  tailwind.config.ts
infra/: README.md  main.bicep
(+37 files in other folders)
