[project]
name = "startup-analyzer-backend"
version = "0.1.0"
description = "CVF-based startup analyzer using gpt-5.3-chat on Azure AI Foundry"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "openai>=1.55.0",
  "sse-starlette>=2.1.3",
  "asyncpg>=0.30.0",
  "redis>=5.2.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
