[project]
name = "chapter-one-backend"
version = "0.1.0"
description = "Chapter One — collaborative idea-evaluation platform using gpt-5.3-chat on Azure AI Foundry"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "openai>=1.55.0",
  "sse-starlette>=2.1.3",
  "asyncpg>=0.30.0",
  "redis>=5.2.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "matplotlib>=3.9.0",
  # M1 additions
  "alembic>=1.14.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "cryptography>=44.0.0",
  "authlib>=1.3.2",
  "pyjwt[crypto]>=2.10.0",
  "pillow>=11.0.0",
  "python-multipart>=0.0.12",
  "azure-identity>=1.19.0",
  "azure-storage-blob>=12.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Keep only real-error categories for Phase 2. Style (UP, B, SIM) layered on later.
select = ["E", "F"]
ignore = ["E501"]  # line-length handled by formatter, not check
